fix: GitHub AS Code Scanning Alert
Building a command line with string concatenation.
https://github.com/nrittsti/ntag/security/code-scanning/1